--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Dropdown.js -->
     <link href="//cdn.rawgit.com/FezVrasta/dropdown.js/master/jquery.dropdown.css" rel="stylesheet">
 
-    <script src="/js/init.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="navbar navbar-default">
