--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="js/materialize.min.js"></script>
 <div class="container">
     <div class="row">
-        <nav>
+        <nav class="teal">
             <div class="nav-wrapper">
                 <a href="#" class="brand-logo">TRANSition</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
