--- a/home.html
+++ b/home.html
@@ -26,21 +26,20 @@
         </nav>
     </div>
     <div class="row">
-        <form class="col s12 m12 l12">
-            <div class="row">
-                <div class="input-field col s6">
-                    <input placeholder="Email or username" id="username" type="text" class="validate">
-                    <label for="username">Email or username</label>
+        <h1>PORTAL</h1>
+        <div class="col s12 m6">
+            <div class="card blue-grey darken-1">
+                <div class="card-content white-text">
+                    <span class="card-title">Card Title</span>
+                    <p>I am a very simple card. I am good at containing small bits of information.
+                        I am convenient because I require little markup to use effectively.</p>
+                </div>
+                <div class="card-action">
+                    <a href="#">This is a link</a>
+                    <a href="#">This is a link</a>
                 </div>
             </div>
-            <div class="row">
-                <div class="input-field col s6">
-                    <input placeholder="Password" id="password" type="password" class="validate">
-                    <label for="password">Password</label>
-                </div>
-            </div>
-            <a class="waves-button-input" href="home.html">Submit</a>
-        </form>
+        </div>
     </div>
 </div>
 </body>
