--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
+    <!-- Main StyleSheet -->
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -18,23 +20,26 @@
     <div class="row">
         <nav class="teal">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">TRANSition</a>
+                <ul id="nav-mobile" class="left hide-on-med-and-down">
+                    <li><a href="index.html"><i class="medium material-icons">arrow_back</i></a></li>
+                </ul>
+                <a href="#" class="center brand-logo">TRANSition</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="info.html">Info</a></li>
+                    <li><a href="#"><i class="medium material-icons">settings</i></a></li>
                 </ul>
             </div>
         </nav>
     </div>
-    <div class="row">
+    <div class="center row">
         <form class="col s12 m12 l12">
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12">
                     <input placeholder="Email or username" id="username" type="text" class="validate">
                     <label for="username">Email or username</label>
                 </div>
             </div>
             <div class="row">
-                <div class="input-field col s6">
+                <div class="input-field col s12">
                     <input placeholder="Password" id="password" type="password" class="validate">
                     <label for="password">Password</label>
                 </div>
