--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
                 <a href="#" class="brand-logo">TRANSition</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="info.html">Info</a></li>
+                    <li><a href="forum.html">Forum</a></li>
                 </ul>
             </div>
         </nav>
