forum add new topic

--- a/forum.html
+++ b/forum.html
@@ -37,31 +37,8 @@
                     <th>Replies</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Something</td>
-                    <td>Another</td>
-                    <td>2</td>
-                    <td>Apr 2</td>
-                </tr>
-                <tr>
-                    <td>Something</td>
-                    <td>Another</td>
-                    <td>2</td>
-                    <td>Apr 15</td>
-                </tr>
-                <tr>
-                    <td>Something</td>
-                    <td>Another</td>
-                    <td>2</td>
-                    <td>May 2</td>
-                </tr>
-                <tr>
-                    <td>Something</td>
-                    <td>Another</td>
-                    <td>2</td>
-                    <td>10 mins</td>
-                </tr>
+            <tbody id="forumBody">
+
             </tbody>
         </table>
         <div class="row">
