trying to see single post

--- a/forum.html
+++ b/forum.html
@@ -20,27 +20,21 @@
     <div class="row">
         <nav class="teal">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">TRANSition</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="info.html">Info</a></li>
-                    <li><a href="forum.html">Forum</a></li>
+                <ul class="left hide-on-med-and-down">
+                    <li><a href="index.html"><i class="medium material-icons">arrow_back</i></a></li>
+                </ul>
+                <a href="#" class="center brand-logo">TRANSition</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="#"><i class="medium material-icons">settings</i></a></li>
                 </ul>
             </div>
         </nav>
     </div>
     <div class="row">
         <h3>Forum</h3>
-        <table class="bordered highlight">
-            <thead>
-                <tr>
-                    <th>Topic</th>
-                    <th>Replies</th>
-                </tr>
-            </thead>
-            <tbody id="forumBody">
+        <div id="forumBody">
 
-            </tbody>
-        </table>
+        </div>
         <div class="row">
             <a class="waves-effect waves-light btn col s12" id="addNewTopic"><i class="material-icons left">add</i>New Topic</a>
         </div>
