--- a/process.html
+++ b/process.html
@@ -15,6 +15,8 @@
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="js/toggle.js"></script>
+
 <div class="container">
     <div class="row">
         <nav class="teal">
@@ -30,30 +32,39 @@
         </nav>
     </div>
     <div class="center row">
-        <div class="col s12 m4 l4">
-            <a href="#">
-            <div class="z-depth-2">
-                <i class="large material-icons">local_hospital</i>
-                <p>Track Your Treatment</p>
-            </div>
-            </a>
+        <div id="users">
+            <input class="search" placeholder="Search" />
+            <i class="small material-icons">search</i>
+            <ul class="list">
+                <li>
+                    <i class="down small material-icons">keyboard_arrow_down</i>
+                    <i class="show rightt small material-icons">keyboard_arrow_right</i>
+                    <h3 class="name">Jonny Stromberg</h3>
+                    <p class="born">1986</p>
+                </li>
+                <li>
+                    <h3 class="name">Jonas Arnklint</h3>
+                    <p class="born">1985</p>
+                </li>
+                <li>
+                    <h3 class="name">Martina Elm</h3>
+                    <p class="born">1986</p>
+                </li>
+                <li>
+                    <h3 class="name">Gustaf Lindqvist</h3>
+                    <p class="born">1983</p>
+                </li>
+            </ul>
+
         </div>
-        <div class="col s12 m4 l4">
-            <a href="process.html">
-            <div class="z-depth-2">
-                <i class="large material-icons">info_outline</i>
-                <p>Understanding the Process</p>
-            </div>
-            </a>
-        </div>
-        <div class="col s12 m4 l4">
-            <a href="#">
-            <div class="z-depth-2">
-                <i class="large material-icons">message</i>
-                <p>Ask a Specialist</p>
-            </div>
-            </a>
-        </div>
+        <script src="http://listjs.com/no-cdn/list.js"></script>
+        <script type="text/javascript">
+            var options = {
+                valueNames: [ 'name', 'born' ]
+            };
+
+            var userList = new List('users', options);
+        </script>
     </div>
 </div>
 </body>
