--- a/forum.html
+++ b/forum.html
@@ -21,7 +21,7 @@
         <nav class="teal">
             <div class="nav-wrapper">
                 <ul class="left hide-on-med-and-down">
-                    <li><a href="index.html"><i class="medium material-icons">arrow_back</i></a></li>
+                    <li><a href="home.html"><i class="medium material-icons">arrow_back</i></a></li>
                 </ul>
                 <a href="#" class="center brand-logo">TRANSition</a>
                 <ul class="right hide-on-med-and-down">
