--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
         <nav class="teal">
             <div class="nav-wrapper">
                 <ul id="nav-mobile" class="left hide-on-med-and-down">
-                    <li><a href="index.html"><i class="medium material-icons">arrow_back</i></a></li>
+                    <li><a href="home.html"><i class="medium material-icons">arrow_back</i></a></li>
                 </ul>
                 <a href="#" class="center brand-logo">TRANSition</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -47,7 +47,7 @@
             </a>
         </div>
         <div class="col s12 m4 l4">
-            <a href="#">
+            <a href="forum.html">
             <div class="z-depth-2">
                 <i class="large material-icons">message</i>
                 <p>Ask a Specialist</p>
