--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Email or username" id="username" type="text" class="validate">
-                    <label for="username">Email or username</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input placeholder="Password" id="password" type="password" class="validate">
-                    <label for="password">Password</label>
                 </div>
             </div>
-            <a class="waves-button-input" href="home.html">Submit</a>
+            <div id="addMargin">
+                <a class="waves-button-input" href="home.html">Submit</a>
+            </div>
         </form>
     </div>
 </div>
