--- a/forum.html
+++ b/forum.html
@@ -20,12 +20,19 @@
     <div class="row">
         <nav class="teal">
             <div class="nav-wrapper">
-                <ul class="left hide-on-med-and-down">
+                <ul class="left">
                     <li><a href="home.html"><i class="medium material-icons">arrow_back</i></a></li>
                 </ul>
                 <a href="#" class="center brand-logo">TRANSition</a>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#"><i class="medium material-icons">settings</i></a></li>
+                    <li><a href="#"><i class="medium material-icons dropdown-button" data-activates='dropdown1'>settings</i></a></li>
+                    <li>
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">My Profile</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#!">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
