--- a/forum.html
+++ b/forum.html
@@ -24,7 +24,7 @@
                     <li><a href="home.html"><i class="medium material-icons">arrow_back</i></a></li>
                 </ul>
                 <a href="#" class="center brand-logo">TRANSition</a>
-                <ul class="right hide-on-med-and-down">
+                <ul class="right">
                     <li><a href="#"><i class="medium material-icons dropdown-button" data-activates='dropdown1'>settings</i></a></li>
                     <li>
                         <ul id='dropdown1' class='dropdown-content'>
