--- a/home.html
+++ b/home.html
@@ -23,8 +23,15 @@
                     <li><a href="home.html"><i class="medium material-icons">arrow_back</i></a></li>
                 </ul>
                 <a href="#" class="center brand-logo">TRANSition</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><i class="medium material-icons">settings</i></a></li>
+                <ul class="right">
+                    <li><a href="#"><i class="medium material-icons dropdown-button" data-activates='dropdown1'>settings</i></a></li>
+                    <li>
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">My Profile</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#!">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
