--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
         <nav class="teal">
             <div class="nav-wrapper">
                 <a href="#" class="center brand-logo">TRANSition</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="#"><i class="medium material-icons">settings</i></a></li>
+                <ul class="right">
+                    <li><a href="#"><i class="medium material-icons dropdown-button" data-activates='dropdown1'>settings</i></a></li>
+                    <li>
+                        <ul id='dropdown1' class='dropdown-content'>
+                            <li><a href="#!">My Profile</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#!">Logout</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
