--- a/forum.html
+++ b/forum.html
@@ -29,7 +29,14 @@
         </nav>
     </div>
     <div class="row">
-        <h3>Forum</h3>
+        <div class="row">
+            <div class="col s6 m6 l6">
+                <h3>Forum</h3>
+            </div>
+            <div class="col s6 m6 l6">
+                <a href="contact.html" class="right">Contact my Therapist</a>
+            </div>
+        </div>
         <table class="bordered highlight">
             <thead>
                 <tr>
