--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,30 @@
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">OKAY</a>
             </div>
         </div>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('#sendMessage').click(function () {
+                    var message = $('input#message').val();
+                    $('#secretMessage').append().html('<p>'+message+'</p>');
+                    $('input#message').val('')
+                })
+            });
+        </script>
         <div id="users">
-
+            <div class="row">
+                <div class="col s6 m6 l6">
+                    <i class="bigger large material-icons">account_circle</i>
+                    <p class="text">Dr. Darien Fenn</p>
+                </div>
+                <div class="col s6 m6 l6">
+                    <div id="secretMessage">
+                    </div>
+                    <div class="green hide left">Thank you for your message. I'll get back to you as soon as I can!</div>
+                    <input type="text" id="message"  name="message" class="left">
+                    <input type="button" value="Send" id="sendMessage" class="right">
+                </div>
+            </div>
+            </div>
         </div>
     </div>
 </div>
