track and contact button

--- a/forum.html
+++ b/forum.html
@@ -38,6 +38,10 @@
         </nav>
     </div>
     <div class="row">
+        <div class="right">
+            <a href="contact.html" class="btn">Contact My Therapist</a><br>
+            Don't have a therapist? Find one <a href="#">here</a>!
+        </div>
         <div id="forumBody">
 
         </div>
