--- a/track.html
+++ b/track.html
@@ -36,31 +36,27 @@
             </div>
         </nav>
     </div>
-    <div class="center row">
-        <div class="col s12 m4 l4">
-            <a href="track.html">
-            <div class="z-depth-2">
-                <i class="large material-icons">local_hospital</i>
-                <p>Track Your Treatment</p>
-            </div>
-            </a>
-        </div>
-        <div class="col s12 m4 l4">
-            <a href="process.html">
-            <div class="z-depth-2">
-                <i class="large material-icons">info_outline</i>
-                <p>Understanding the Process</p>
-            </div>
-            </a>
-        </div>
-        <div class="col s12 m4 l4">
-            <a href="forum.html">
-            <div class="z-depth-2">
-                <i class="large material-icons">message</i>
-                <p>Ask a Specialist</p>
-            </div>
-            </a>
-        </div>
+    <div class="row">
+        <h3>Track My Transition</h3>
+    </div>
+    <div class="row">
+        <ul class="collection">
+            <li class="collection-item">
+               <a href="#">
+                    <p>Daily Calendar</p>
+               </a>
+            </li>
+            <li class="collection-item">
+                <a href="#">
+                    <p>Custom Treatment Plan</p>
+                </a>
+            </li>
+            <li class="collection-item">
+                <a href="#">
+                    <p>My Progress</p>
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
 </body>
